# org.muhkuh.lua-coco

./: CMakeLists.txt  build_artifact.py  dependency-log-lua5.1.xml  dependency-log-lua5.4.xml  dependency-log-server.xml
cmake/: muhkuh_lua.cmake
coco/: CMakeLists.txt  color_control_init.lua  detect_interfaces.lua  i2c_routines.c  i2c_routines.h  io_operations.c  io_operations.h  led_analyzer.c  led_analyzer.h  led_analyzer.i  sleep_ms.h  tcs3472.c  tcs3472.h
coco/config/: tData.json
coco/example_device/: netx56_generated.lua  netx56_saved.ini
coco/installer/lua5.1/: coco.xml  install_linux.lua  install_windows.lua
coco/installer/lua5.4/: coco.xml  install_linux.lua  install_windows.lua
coco/lua/: CoCo_client.lua  CoCo_server.lua  color_control.lua  color_conversions.lua  color_validation.lua  generate_xml.lua  interface.lua  tTestSet.json  tcs_chromaTable.lua
data_TCS3400/: TCS3400.py  TCS3400_RGBC.csv  TCS3400_RGBC.json  TCS3400_RGBC.xlsx  TCS3400_Spectral_Response_3-lots.xlsx  tTCS_Chromaticity.json
jonchki/org.muhkuh.tools-coco_server/: coco_server.xml  finalizer.lua  jonchkicfg.xml
